--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,4 +1,7 @@
-$blue: #0070C0;
-$lightBlue: #4F81BD;
+$blue: #0070c0;
+$lightBlue: #4f81bd;
 $black: #000;
+$grey: #818281;
 $white: #fff;
+$red: #d60000;
+$green: #027c02;
